# ttk4900

./: .gitignore  CMakeLists.txt  README.md  commands.txt  notater.md  package.xml  requirements.txt
data/recorded_runs/python_plots/Saved/newestSensorComparisons/lidar/: LatestRun.csv  rawEstimates.bag
data/recorded_runs/python_plots/Saved/newestSensorComparisons/lidar+imu/: LatestRun.csv  rawEstimates.bag
data/recorded_runs/python_plots/Saved/newestSensorComparisons/lidar+imu+gnss/: LatestRun.csv  rawEstimates.bag
data/recorded_runs/python_plots/Saved/singleLoopWithLoopClosure/1/: LatestRun.csv  simpleTunnel_big_loopClosure.bag
data/recorded_runs/python_plots/Saved/singleLoopWithLoopClosure/10/: LatestRun.csv  rawEstimates.bag
data/recorded_runs/python_plots/Saved/singleLoopWithLoopClosure/11/: LatestRun.csv  rawEstimates.bag  tuning.txt
data/recorded_runs/python_plots/Saved/singleLoopWithLoopClosure/2/: LatestRun.csv  simpleTunnel_big_loopClosure.bag
data/recorded_runs/python_plots/Saved/singleLoopWithLoopClosure/3/: LatestRun.csv  simpleTunnel_big_loopClosure.bag
data/recorded_runs/python_plots/Saved/singleLoopWithLoopClosure/4/: LatestRun.csv  loopclosures.txt  simpleTunnel_big_loopClosure.bag
data/recorded_runs/python_plots/Saved/singleLoopWithLoopClosure/5/: LatestRun.csv  loopclosures.txt  rawEstimates.bag
data/recorded_runs/python_plots/Saved/singleLoopWithLoopClosure/6/: LatestRun.csv  rawEstimates.bag  tuning.txt
data/recorded_runs/python_plots/Saved/singleLoopWithLoopClosure/7/: LatestRun.csv  rawEstimates.bag  tuning.txt
data/recorded_runs/python_plots/Saved/singleLoopWithLoopClosure/8/: LatestRun.csv  rawEstimates.bag
data/recorded_runs/python_plots/Saved/singleLoopWithLoopClosure/9/: LatestRun.csv  rawEstimates.bag  tuning.txt
data/recorded_runs/python_plots/Saved/singleLoopWithLoopClosure/noLoopClosure/: LatestRun.csv  rawEstimates.bag  tuning.txt
include/tunnel_slam/: feature_association.hpp  graph.hpp  tunnel_slam.hpp
launch/: tunnel_slam.launch  tunnel_slam.rviz
simulator_matlab/: addGNSS.m  plotWaypoints.m  save_3DSim_data.m  select_waypoints.m  setImuParameters.m  setLidarParameters.m  setup_unrealEngine.m  sim3d.slx  sim3d.slxc  simulate_3D_scenario.m
src/: comparisons.py  feature_association.cpp  feature_association_node.cpp  graph.cpp  graph_node.cpp  mat2bag.py  run_metrics.py  simpleTunnel_big_loopClosure.bag  simpleTunnel_straightPath.bag  tunnel_slam.cpp  tunnel_slam_node.cpp
